# mux-api

./: .gitignore  README.md  mux-api.plugin.zsh  mux-api.zsh  pyproject.toml  run-tests  test-utils.zsh
api/json-schema/: clear-and-replace-vars-request.json  clear-and-replace-vars-response.json  common.json  get-all-vars-request.json  get-all-vars-response.json  get-location-info-request.json  get-location-info-response.json  get-multiple-vars-request.json  get-multiple-vars-response.json  resolve-all-vars-request.json  resolve-all-vars-response.json  resolve-multiple-vars-request.json  resolve-multiple-vars-response.json  set-multiple-vars-request.json  set-multiple-vars-response.json
doc/: api.md
fbin/: mux
functions/: mux
lib/: README.md  build-mux.zsh  configure.zsh  executor-lib.zsh  info.zsh  main.zsh  registers.zsh  system.zsh  tabs.zsh  tree.zsh  utils.zsh  validators.zsh  vars.zsh
mock-mux/: mock-mux.plugin.zsh
mock-mux/functions/: mock-mux
mock-mux/lib/: configure.zsh  registers.zsh  system.zsh  utils.zsh
mux/: __init__.py  api.py  client.py  errors.py  model.py  rpc_processor.py  server.py  service.py
new-lib/: executor-lib.zsh  tree.zsh
new_functions/: mux
old_functions/: mux
server/: README.md  call  eval-executor.zsh  executor-loop.zsh  executor.zsh  foo.zsh  logger.zsh  main  mock-executor.zsh  test-prog.zsh
test/: run-tests  test-mux.plugin.zsh  test-mux.zsh  test-utils.zsh
test/fbin/: test-mux
test/lib/: configure.zsh  info.zsh  registers.zsh  tree.zsh  utils.zsh  vars.zsh
tests/info/: set-info-entry.test.zsh  (+2 more)
(+24 files in other folders)
